tests/read_only_array_polarity/read_only_array_polarity.exp
Error ---------------------------------------------------------------------------------------------------- test.js:16:34

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.
[incompatible-variance]

   test.js:16:34
   16|   bad(x: number): $ReadOnlyArray<T> {
                                        ^

References:
   test.js:15:12
   15| class Baz<-T> {
                  ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:23:26

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.
[incompatible-variance]

   test.js:23:26
   23|   bad(x: ($ReadOnlyArray<T>) => number): number {
                                ^

References:
   test.js:22:18
   22| class ContraBaz<-T> {
                        ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:40:1

Cannot assign `42` to `x[0]` because read-only arrays cannot be written to. [cannot-write]

   40| x[0] = 42;
       ^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:41:1

Cannot assign `42` to `x[0]` because read-only arrays cannot be written to. [cannot-write]

   41| x[0 as any] = 42;
       ^^^^^^^^^^^



Found 4 errors
